corrected spacing

--- a/index.css
+++ b/index.css
@@ -12,13 +12,13 @@
     gap: 10px;
     color: white;
     text-align: center;
-    
+    width: 33.3%;    
 }
 .card1{
-    width: 250px;
     height: 80px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     background-color: black;
+    width: 50%;
 }
 @media screen and (max-width: 925px) {
     .container1n2{
